Complete part 2 and fix minor bugs
Some of the images were not fitting in correctly and I accidentally
deleted the dimensions of the rainbow photo... it is fixed now!

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="pair">
           <img src="images/bishop.png" alt="a chess bishop" class="piece">
           <p class="description">
-            Here is a bishop. It is a weaker queen. The queen combines the bishop's and rook's ability. The
+            Here is a bishop. It is a weaker queen. The queen combines the bishop's and rook's abilites. The
             bishop's ability is to move diagonally. It is often a very good long range fighter and has led to
             many many low elo checkmates on the g7 square when teamed up with the queen.
           </p>
@@ -69,13 +69,18 @@
         <div class="pair">
           <img src="images/lol.jpg" alt="a very interesting sir" class="piece">
           <p class="description">
-            I was going to put a rook for the last piece since is the only one left (other than a pawn (yawn)). 
+            I was going to put a rook for the last piece since it is the only one left (other than a pawn (yawn)). 
             However, I came across this thing when I was scrolling for images and I found it quite interesting.
             I am not exactly sure what it is or why knights are so obsessed with him but perhaps it a leak from the
             upcoming chess update!
           </p>
         </div>
       </div>
+    </div>
+
+    <div class="quote">
+      "After buying this course, my life changed forever. My wife came back with the kids and my college tuition god 
+      paid by god. I am also immortal and my chess elo is above 3000. I can do anything I want." - a real customer
     </div>
   </body>
 </html>
