--- a/index.html
+++ b/index.html
@@ -79,8 +79,13 @@
     </div>
 
     <div class="quote">
-      "After buying this course, my life changed forever. My wife came back with the kids and my college tuition god 
-      paid by god. I am also immortal and my chess elo is above 3000. I can do anything I want." - a real customer
+      <p class="main">
+        "After buying this course, my life changed forever. My wife came back with the kids and my college tuition god 
+        paid by god. I am also immortal and my chess elo is above 3000. I can do anything I want." 
+      </p>
+      <p class="person">
+        <strong> -a real customer</strong>
+      </p>
     </div>
   </body>
 </html>
