--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             boost your elo to 21!! One time offer. You will never come across such an offer
             ever again. You better come and get it while you can!
           </div>
-          <button>
+          <button class="signup">
             Sign Up
           </button>
         </div>
@@ -80,12 +80,33 @@
 
     <div class="quote">
       <p class="main">
-        "After buying this course, my life changed forever. My wife came back with the kids and my college tuition god 
+        "After buying this course, my life changed forever. My wife came back with the kids and my college tuition got 
         paid by god. I am also immortal and my chess elo is above 3000. I can do anything I want." 
       </p>
       <p class="person">
         <strong> -a real customer</strong>
       </p>
+    </div>
+
+    <div class="sell">
+      <div class="text">
+        <p class="title">
+          What Are You Waiting For?
+        </p>
+        <p class="pitch">
+          Buy our course and change your life today. You've probably wasted tons of 
+          money on some crap like the Azonam Alexa. What's your excuse for not buying 
+          something actually useful? You know you wanna... do it! do it! do it! do it!
+          ...
+        </p>
+      </div>
+      <button class="signup">
+        Sign Up
+      </button>
+    </div>
+
+    <div class="footer">
+      Copyright C Brooster/SeanCagin 2023
     </div>
   </body>
 </html>
